--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
     top: 200px;
 
     font-family: 'Didact Gothic';
-    font-style: center;
+    font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
