--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@
     position: absolute;
     width: 258px;
     height: 168px;
-    left: 1080;
-    top: 100;
+    left: 1080px;
+    top: 100px;
 
     background: url(pcprogramacao.png);
     border-radius: 70px;
