--- a/style.css
+++ b/style.css
@@ -110,6 +110,55 @@
     color: #000000;
 }
 
+.corpopa3{
+    position: absolute;
+    width: 889px;
+    height: 364px;
+    left: 69px;
+    top: 340px;
+
+    font-family: 'Didact Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #000000;
+}
+
+.corpopa31{
+    position: absolute;
+    width: 889px;
+    height: 364px;
+    left: 69px;
+    top: 380px;
+
+    font-family: 'Didact Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #000000;
+
+}
+
+.corpopa32{
+    position: absolute;
+    width: 889px;
+    height: 364px;
+    left: 69px;
+    top: 400px;
+
+    font-family: 'Didact Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #000000;
+}
+
 .imgbio{
     position: absolute;
     width: 293px;
