--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@
     width: 889px;
     height: 364px;
     left: 69px;
-    top: 340px;
+    top: 360px;
 
     font-family: 'Didact Gothic';
     font-style: normal;
@@ -131,7 +131,7 @@
     width: 889px;
     height: 364px;
     left: 69px;
-    top: 380px;
+    top: 400px;
 
     font-family: 'Didact Gothic';
     font-style: normal;
@@ -148,7 +148,7 @@
     width: 889px;
     height: 364px;
     left: 69px;
-    top: 400px;
+    top: 420px;
 
     font-family: 'Didact Gothic';
     font-style: normal;
@@ -159,6 +159,68 @@
     color: #000000;
 }
 
+.lista1{
+    position: absolute;
+    width: 889px;
+    height: 364px;
+    left: 69px;
+    top: 450px;
+
+    font-family: 'Didact Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #000000;
+}
+
+.lista2{
+    position: absolute;
+    width: 889px;
+    height: 364px;
+    left: 69px;
+    top: 500px;
+
+    font-family: 'Didact Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #000000;
+}
+.lista3{
+    position: absolute;
+    width: 889px;
+    height: 364px;
+    left: 69px;
+    top: 550px;
+
+    font-family: 'Didact Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #000000;
+}
+
+.lista4{
+    position: absolute;
+    width: 889px;
+    height: 364px;
+    left: 69px;
+    top: 600px;
+
+    font-family: 'Didact Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #000000;
+}
 .imgbio{
     position: absolute;
     width: 293px;
