--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-button{
+//--button{
     appearance: auto;
     writing-mode: horizontal-tb;
     text-rendering: auto;
@@ -31,7 +31,7 @@ button{
     text-shadow: none;
     display: inline-block;
     text-align: center;
-}
+}--//
 
 .item1{
     position: absolute;
