--- a/styleitinerarios.css
+++ b/styleitinerarios.css
@@ -67,3 +67,99 @@
 
     color: #000000;
 }
+
+.botao1{
+    position: absolute;
+    width: 209px;
+    height: 80px;
+    left: 149px;
+    top: 810px;
+
+    background: #D4E1E4;
+    border-radius: 95px;
+}
+
+.botao2{
+    position: absolute;
+    width: 209px;
+    height: 80px;
+    left: 467px;
+    top: 810px;
+
+    background: #D4E1E4;
+    border-radius: 95px;
+}
+
+.botao3{
+    position: absolute;
+    width: 209px;
+    height: 80px;
+    left: 785px;
+    top: 810px;
+
+    background: #D4E1E4;
+    border-radius: 95px;
+}
+
+.rodape{
+    position: absolute;
+    width: 1440px;
+    height: 75px;
+    left: 0px;
+    top: 1120px;
+
+    background: #D4E1E4;
+}
+
+.rodapet1{
+    position: absolute;
+    width: 78px;
+    height: 20px;
+    left: 682px;
+    top: 0px;
+
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+
+    color: #000000;
+
+
+}
+
+.rodapet2{
+
+    position: absolute;
+    width: 100px;
+    height: 20px;
+    left: 670px;
+    top: 20px;
+    
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    
+    color: #000000;
+    border-radius: 150px;
+}
+
+.rodapeano{
+    position: absolute;
+    width: 37px;
+    height: 20px;
+    left: 1218px;
+    top: 40px;
+    
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    
+    color: #000000;
+   
+}
