--- a/styleitinerarios.css
+++ b/styleitinerarios.css
@@ -42,6 +42,17 @@
     background: #D4E1E4;
     border-radius: 95px;
 }
+
+.item3{
+    position: absolute;
+    width: 300px;
+    height: 90px;
+    left: 942px;
+    top:75px ;
+
+    background: #D4E1E4;
+    border-radius: 95PX ;
+}
 .corpo{
     position: absolute;
     width: 1440px;
